--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "make-coverage-badge": "^1.2.0",
     "moment-timezone": "^0.5.32",
     "numbro": "^2.2.0",
+    "parse-num": "^1.0.0",
     "prop-types": "^15.6.2",
     "rc-drawer": "^1.10.1",
     "react-autosuggest": "^9.4.3",
