--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "disable-scroll": "^0.5.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
+    "lodash.has": "^4.5.2",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.reduce": "^4.6.0",
