--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-autoql": "file:../",
+    "react-autoql": "file:react-autoql-0.0.0-semantically-released.tgz",
     "antd": "^4.0.1",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
@@ -32,8 +32,5 @@
     "node": ">=10.15.1",
     "npm": "^6.0.1"
   },
-  "cacheDirectories": [],
-  "env": {
-    "NODE_ENV": "dev"
-  }
+  "cacheDirectories": []
 }
