--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-grid-layout": "^0.16.6",
     "react-icons": "^3.8.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-localization": "^1.0.16",
     "react-modal": "^3.11.2",
     "react-paginate": "^6.3.2",
     "react-select": "^3.1.1",
