--- a/example/package.json
+++ b/example/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-autoql": "file:react-autoql-0.0.0-semantically-released.tgz",
     "antd": "^4.0.1",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
     "penv": "^0.2.0",
     "react": "^16.8.6",
+    "react-autoql": "file:../",
     "react-dom": "^16.8.6",
+    "react-html-renderer": "^0.3.2",
+    "react-ratings-declarative": "^3.4.1",
     "react-scripts": "^3.4.1",
-    "react-sortable": "^2.0.0",
-    "react-ratings-declarative": "^3.4.1"
+    "react-sortable": "^2.0.0"
   },
   "scripts": {
     "preinstall": "npx penv $NODE_ENV",
@@ -32,5 +33,8 @@
     "node": ">=10.15.1",
     "npm": "^6.0.1"
   },
-  "cacheDirectories": []
+  "cacheDirectories": [],
+  "env": {
+    "NODE_ENV": "dev"
+  }
 }
