--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-grid-layout": "^0.16.6",
+    "react-html-renderer": "^0.3.2",
     "react-icons": "^3.8.0",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
