--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
     "d3": "^5.12.0",
     "d3-array": "^2.3.3",
@@ -62,6 +62,7 @@
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.36",
     "disable-scroll": "^0.5.0",
+    "ionicons": "^5.5.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
