--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.36",
     "disable-scroll": "^0.5.0",
+    "install": "^0.13.0",
     "ionicons": "^5.5.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
@@ -163,7 +164,7 @@
     "**/**/fsevents": "^1.2.9"
   },
   "engines": {
-    "node": ">=10.18"
+    "node": ">=14.17.3"
   },
   "config": {
     "commitizen": {
