--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.36",
     "disable-scroll": "^0.5.0",
+    "install": "^0.13.0",
+    "ionicons": "^5.5.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
@@ -147,7 +149,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-postcss": "^2.9.0",
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-terser": "^5.1.2",
     "semantic-release": "^17.0.8",
@@ -162,7 +164,7 @@
     "**/**/fsevents": "^1.2.9"
   },
   "engines": {
-    "node": ">=10.18"
+    "node": ">=14.17.3"
   },
   "config": {
     "commitizen": {
