--- a/package.json
+++ b/package.json
@@ -64,12 +64,14 @@
     "disable-scroll": "^0.5.0",
     "install": "^0.13.0",
     "ionicons": "^5.5.2",
+    "jwt-decode": "^3.1.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.reduce": "^4.6.0",
+    "lodash.uniq": "^4.5.0",
     "make-coverage-badge": "^1.2.0",
     "moment-timezone": "^0.5.32",
     "numbro": "^2.2.0",
