--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
+    "lodash.includes": "^4.3.0",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.reduce": "^4.6.0",
