--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "url": "https://github.com/chatatechnologies/react-autoql/issues"
   },
   "dependencies": {
+    "@babel/core": "^7.16.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
