--- a/.babelrc
+++ b/.babelrc
@@ -32,11 +32,21 @@
   // required for transpilation to work with jest
   "env": {
     "test": {
-      "presets": ["env", "react"],
+      "presets": ["@babel/preset-env", "@babel/preset-react"],
       "plugins": [
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-proposal-object-rest-spread",
-        "@babel/plugin-syntax-object-rest-spread"
+        "@babel/plugin-syntax-object-rest-spread",
+        [
+          "@babel/plugin-transform-runtime",
+          {
+            "absoluteRuntime": false,
+            "corejs": false,
+            "helpers": false,
+            "regenerator": true,
+            "version": "7.0.0-beta.0"
+          }
+        ]
       ]
     }
   }
