--- a/package.json
+++ b/package.json
@@ -47,9 +47,18 @@
     "url": "https://github.com/chatatechnologies/react-autoql/issues"
   },
   "dependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/runtime": "^7.16.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
+    "babel-core": "^7.0.0-bridge.0",
     "d3": "^5.12.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
@@ -77,7 +86,7 @@
     "moment-timezone": "^0.5.32",
     "numbro": "^2.2.0",
     "parse-num": "^1.0.0",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "rc-drawer": "^1.10.1",
     "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
@@ -101,6 +110,9 @@
     "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-image": "^2.0.5",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
@@ -110,16 +122,9 @@
     "@semantic-release/release-notes-generator": "^9.0.1",
     "autoprefixer": "^9.7.0",
     "axios-mock-adapter": "^1.18.1",
-    "babel-cli": "https://registry.npmjs.org/babel-cli/-/babel-cli-6.26.0.tgz",
-    "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.26.0.tgz",
-    "babel-jest": "^23.6.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "https://registry.npmjs.org/babel-preset-env/-/babel-preset-env-1.6.1.tgz",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.4.2",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "babel-preset-react": "^6.24.1",
     "check-prop-types": "^1.1.2",
     "cz-conventional-changelog": "^3.2.0",
     "enzyme": "^3.7.0",
@@ -148,7 +153,7 @@
     "react-test-renderer": "^16.11.0",
     "rimraf": "^2.7.1",
     "rollup": "^1.25.2",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
