--- a/package.json
+++ b/package.json
@@ -172,7 +172,7 @@
     "**/**/fsevents": "^1.2.9"
   },
   "engines": {
-    "node": ">=14.17.3"
+    "node": "14.17.3"
   },
   "config": {
     "commitizen": {
