--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@babel/plugin-transform-runtime": "^7.16.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-image": "^2.0.5",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
@@ -152,7 +153,7 @@
     "react-dom": "^16.13.1",
     "react-test-renderer": "^16.11.0",
     "rimraf": "^2.7.1",
-    "rollup": "^1.25.2",
+    "rollup": "^2.59.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^1.0.0",
