--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm i
-            - run: npm i react react-dom
+            - run: export NODE_OPTIONS=--openssl-legacy-provider && npm i react react-dom
             - run:
                 name: Run Tests
                 no_output_timeout: 60m
