--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "autoql-fe-utils": "1.0.21",
+    "autoql-fe-utils": "file:autoql-fe-utils-1.0.22.tgz",
     "axios": "^1.4.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
@@ -108,24 +108,24 @@
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-class-properties": "^7.22.5",
     "@babel/plugin-transform-modules-commonjs": "^7.18.2",
+    "@babel/plugin-transform-object-rest-spread": "^7.22.15",
     "@babel/plugin-transform-runtime": "^7.18.5",
-    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.17.12",
-    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-image": "^2.0.5",
-    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "autoprefixer": "^9.7.0",
     "axios-mock-adapter": "^1.18.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^28.1.1",
-    "babel-plugin-import": "^1.13.3",
-    "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-plugin-import": "^1.13.8",
     "check-prop-types": "^1.1.2",
-    "cheerio": "=1.0.0-rc.10",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.25.0",
@@ -133,31 +133,20 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
-    "gh-pages": "^2.1.1",
     "husky": "^2.7.0",
-    "jest": "^28.1.1",
+    "jest": "^29.7.0",
     "jest-css-modules": "^2.0.0",
-    "jest-environment-jsdom": "^28.1.1",
-    "jest-mock-axios": "^4.2.0",
-    "jsdom": "^19.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.0.2",
     "npm-watch": "^0.11.0",
+    "postcss": "^8.4.30",
     "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3",
-    "react-test-renderer": "^16.11.0",
     "rimraf": "^2.7.1",
-    "rollup": "^2.59.0",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-bundle-size": "^1.0.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-css-only": "^1.0.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-gzip": "^3.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-svg": "^1.0.1",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-visualizer": "^5.6.0",
+    "rollup-plugin-scss": "^4.0.0",
+    "rollup-plugin-svg": "^2.0.0",
     "sass": "^1.67.0"
   },
   "peerDependencies": {
