--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "autoql-fe-utils": "file:autoql-fe-utils-1.0.22.tgz",
+    "autoql-fe-utils": "1.0.22",
     "axios": "^1.4.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
@@ -96,7 +96,7 @@
     "react-slider": "^2.0.4",
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
-    "react-tiny-popover": "7.1.0",
+    "react-tiny-popover": "^7.2.4",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^5.21.4",
     "recordrtc": "^5.6.1",
@@ -120,7 +120,7 @@
     "@rollup/plugin-image": "^2.0.5",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-terser": "^0.4.3",
-    "autoprefixer": "^9.7.0",
+    "autoprefixer": "^10.4.16",
     "axios-mock-adapter": "^1.18.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^28.1.1",
@@ -140,7 +140,7 @@
     "jsdom": "^22.1.0",
     "lint-staged": "^13.0.2",
     "npm-watch": "^0.11.0",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.31",
     "prettier": "^2.7.1",
     "rimraf": "^2.7.1",
     "rollup": "^2.79.1",
