--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "react-slider": "^2.0.4",
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
-    "react-tiny-popover": "^7.2.4",
+    "react-tiny-popover": "7.1.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^5.21.4",
     "recordrtc": "^5.6.1",
