--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "npm run watch devscript",
     "dev": "npm run watch devscript",
     "devscript": "export NODE_ENV=dev && npm run build",
-    "test": "jest --silent=false",
+    "test": "jest --silent=false --maxWorkers=4",
     "test:changed": "jest --onlyChanged",
     "test:watch": "jest --watch",
     "test:coverage": "npm test -- --coverage",
